@@ -1,5 +1,5 @@
 ;; -*- mode: emacs-lisp; mode: hi-lock; mode: page-break; auto-compile-lisp: nil; -*-
-;; $Id: dotgnus.el,v 1.15 2004/09/22 09:13:59 sigma Exp $
+;; $Id: dotgnus.el,v 1.16 2004/10/27 09:23:12 sigma Exp $
 
 ;; Hi-lock: (("^;;; \\(.*\\)" (1 'hi-black-hb t)))
 ;; Hi-lock: (("^ +;;; \\(.*\\)" (1 'hi-black-b t)))
@@ -779,6 +779,6 @@ Must be called from the `gnus-select-group-hook'."
 
 (autoload 'trivial-cite "tc" t t)
 
-(server-start)
+;; (server-start)
 (calendar)
 (find-file (concat planner-directory "/" planner-default-page))
